--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -2,6 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
+    android:layout_height="fill_parent" >
+    <LinearLayout android:layout_width="wrap_content" android:id="@+id/linearLayout1" android:orientation="horizontal" android:layout_height="wrap_content">
+        <Button android:layout_width="wrap_content" android:text="Scan" android:id="@+id/btn_scan" android:layout_height="wrap_content"></Button>
+        <Button android:layout_width="wrap_content" android:text="Skip Scan" android:id="@+id/btn_demo" android:layout_height="wrap_content"></Button>
+    </LinearLayout>
 </LinearLayout>
