--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -2,9 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-    <LinearLayout android:layout_width="wrap_content" android:id="@+id/linearLayout1" android:orientation="horizontal" android:layout_height="wrap_content">
-        <Button android:layout_width="wrap_content" android:text="Scan" android:id="@+id/btn_scan" android:layout_height="wrap_content"></Button>
-        <Button android:layout_width="wrap_content" android:text="Skip Scan" android:id="@+id/btn_demo" android:layout_height="wrap_content"></Button>
-    </LinearLayout>
+    android:layout_height="fill_parent" android:gravity="center">
+    <TableLayout android:id="@+id/tableLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
+        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center">
+            <Button android:layout_width="wrap_content" android:id="@+id/btn_scan" android:text="Scan" android:layout_height="wrap_content" android:drawableTop="@drawable/scan"></Button>
+            <Button android:text="Load" android:id="@+id/btn_load" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawableTop="@drawable/collection"></Button>
+            <Button android:id="@+id/btn_search" android:layout_height="wrap_content" android:layout_width="wrap_content" android:drawableTop="@drawable/search" android:text="Search"></Button>
+        </TableRow>
+        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center">
+            <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Help" android:drawableTop="@drawable/help" android:id="@+id/btn_help"></Button>
+            <Button android:id="@+id/btn_about" android:layout_height="wrap_content" android:layout_width="wrap_content" android:drawableTop="@drawable/museum" android:text="About"></Button>
+        </TableRow>
+    </TableLayout>
+    <Button android:layout_width="wrap_content" android:id="@+id/btn_demo" android:text="Skip Scan" android:layout_height="wrap_content" android:drawableTop="@drawable/icon"></Button>
 </LinearLayout>
