--- a/android/res/layout/collection.xml
+++ b/android/res/layout/collection.xml
@@ -2,5 +2,6 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="match_parent" android:gravity="center">
+    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Under Construction"></TextView>
 </LinearLayout>
